--- a/goodreadsPandas.ipynb
+++ b/goodreadsPandas.ipynb
@@ -4,9 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* goodreads_library_export.csv'\n",
-    "* but this time - i learned how to properly write the file path instead of hardcoding it ! :)\n",
-    "* i want to use the data to figure out how much i am reading throughout the year, specifically each month "
+    "\n",
+    "* i want to use pandas to use the data to figure out how much i am reading throughout the year, specifically each month "
    ]
   },
   {
@@ -417,7 +416,7 @@
    ],
    "source": [
     "import pandas as pd\n",
-    "df = pd.read_csv('../data/raw/goodreads_library_export.csv', header=0)\n",
+    "df = pd.read_csv('goodreads_library_export.csv', header=0)\n",
     "df\n",
     "                 "
    ]
